--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -3,33 +3,33 @@ server:
 
 spring:
   application:
-    #\u5E94\u7528\u540D\u79F0
+    #应用名称
     name: config-server
   cloud:
     config:
-      #\u5206\u652F
-      label: master
+      #分支
+      label: test
       server:
         git:
-          #\u4ED3\u5E93\u5730\u5740
-          #\u53EF\u4EE5\u901A\u8FC7{application}\u5360\u4F4D\u7B26\u5B9E\u73B0\u4E00\u4E2A\u5E94\u7528\u5BF9\u5E94\u4E00\u4E2Agit\u4ED3\u5E93\u76EE\u5F55\u7684\u914D\u7F6E\u6548\u679C
-          #\u4F1A\u6839\u636E\u5BA2\u6237\u7AEF\u7684spring.application.name\u4FE1\u606F\u6765\u586B\u5145{application}
+          #仓库地址
+          #可以通过{application}占位符实现一个应用对应一个git仓库目录的配置效果
+          #会根据客户端的spring.application.name信息来填充{application}
           #uri: https://github.com/hansonwang99/{application}
-          uri: https://github.com/hansonwang99/xxxx
-          #\u7528\u6237\u540D
-          username: xxxx
-          #\u5BC6\u7801
-          password: xxxx
-          #\u4ED3\u5E93\u8DEF\u5F84
-          search-paths: respo
-          #\u914D\u7F6E\u4E2D\u5FC3\u8FDC\u7A0Bclone\u4E0B\u6765\u7684\u914D\u7F6E\u6587\u4EF6\u6240\u5728\u7684\u4F4D\u7F6E\u3002\u9ED8\u8BA4\u60C5\u51B5\u4E0B\uFF0C\u5B83\u4EEC\u653E\u5728\u7CFB\u7EDF\u4E34\u65F6\u76EE\u5F55\u4E2D\uFF0C\u524D\u7F00\u4E3Aconfig-repo-\u3002(linux\uFF0C/tmp/config-repo-xxx)
-          basedir: xxxx
+          uri: https://github.com/EverHE/config-repo.git
+          #用户名
+          username: heleiever@hotmail.com
+          #密码
+          password: ever88642356
+          #仓库路径
+          #search-paths: respo
+          #配置中心远程clone下来的配置文件所在的位置。默认情况下，它们放在系统临时目录中，前缀为config-repo-。(linux，/tmp/config-repo-xxx)
+          basedir: c:\\temp
 
-# \u4E3A\u4E86\u8BA9config server\u5B9E\u73B0\u96C6\u7FA4\u3001\u9AD8\u53EF\u7528\uFF0C\u5219\u9700\u8981\u914D\u7F6Eeureka\u6CE8\u518C\u4E2D\u5FC3
-eureka:
-  instance:
-    hostname: localhost # \u670D\u52A1\u63D0\u4F9B\u8005\u5E94\u7528\u6240\u5728\u7684\u4E3B\u673A\uFF08\u672C\u5730\u6D4B\u8BD5\u7684\u8BDD\uFF0C\u4F7F\u7528localhost\u6216\u8005127.0.0.1\u5373\u53EF\uFF0C\u6216\u8005\u5728host\u6587\u4EF6\u4E2D\u6307\u5B9A\u4E00\u4E2A\u865A\u62DF\u57DF\u540D\u4E5F\u53EF\u4EE5\uFF09
-    #lease-renewal-interval-in-seconds: 5 # \u5FC3\u8DF3\u65F6\u95F4\uFF0C\u8868\u793Aeureka client\u53D1\u9001\u5FC3\u8DF3\u7ED9eureka server\u7AEF\u7684\u9891\u7387\uFF08\u7F3A\u7701\u4E3A30s\uFF09
-  client:
-    service-url:
-      defaultZone: http://server.eureka.slave1.com:18761/eureka,http://server.eureka.slave2.com:28761/eureka # \u6307\u5B9Aeureka\u670D\u52A1\u5668\u96C6\u7FA4\u5217\u8868\u5730\u5740
+## 为了让config server实现集群、高可用，则需要配置eureka注册中心
+#eureka:
+#  instance:
+#    hostname: localhost # 服务提供者应用所在的主机（本地测试的话，使用localhost或者127.0.0.1即可，或者在host文件中指定一个虚拟域名也可以）
+#    #lease-renewal-interval-in-seconds: 5 # 心跳时间，表示eureka client发送心跳给eureka server端的频率（缺省为30s）
+#  client:
+#    service-url:
+#      defaultZone: http://${eureka.instance.hostname}:8761/eureka # 指定eureka服务器集群列表地址
