--- a/route-zuul/src/main/resources/application.yml
+++ b/route-zuul/src/main/resources/application.yml
@@ -10,66 +10,66 @@ eureka:
     serviceUrl:
       defaultZone: http://lishangzhi:123456@localhost:8101/eureka
   instance:
-    prefer-ip-address: true   # \u542F\u7528ip\u914D\u7F6E \u8FD9\u6837\u5728\u6CE8\u518C\u4E2D\u5FC3\u5217\u8868\u4E2D\u770B\u89C1\u7684\u662F\u4EE5ip+\u7AEF\u53E3\u5448\u73B0\u7684
+    prefer-ip-address: true # 启用ip配置 这样在注册中心列表中看见的是以ip+端口呈现的
     instanceId: ${spring.application.name}:${server.port}
 
 
-#\u9ED8\u8BA4\u60C5\u51B5\u4E0B\uFF1AZuul\u4EE3\u7406\u6240\u6709\u6CE8\u518C\u5230EurekaServer\u7684\u5FAE\u670D\u52A1
-#\u8DEF\u7531\u89C4\u5219\uFF1A http://ZUUL_HOST:ZUUL_PORT/\u5FAE\u670D\u52A1\u5B9E\u4F8B\u540D(serverId)/** \u8F6C\u53D1\u81F3serviceId\u5BF9\u5E94\u7684\u5FAE\u670D\u52A1\u3002
+#默认情况下：Zuul代理所有注册到EurekaServer的微服务
+#路由规则： http://ZUUL_HOST:ZUUL_PORT/微服务实例名(serverId)/** 转发至serviceId对应的微服务。
 zuul:
   routes:
-    #\u9759\u6001\u8D44\u6E90\u8DEF\u7531\u914D\u7F6E
+    #静态资源路由配置
     ui-js:
       path: /**/**.js
       serviceId: reborn-ui-server
-    #\u9759\u6001\u8D44\u6E90\u8DEF\u7531\u914D\u7F6E
+    #静态资源路由配置
     ui-html:
       path: /**/**.html
       serviceId: reborn-ui-server
 
-    #\u670D\u52A1\u53D1\u73B0\u6A21\u5F0F
+    #服务发现模式
     api-a:
-      path: /api-a/**  # /api-user\u5F00\u5934\u7684\u8BF7\u6C42\uFF0C\u5168\u90E8\u8F6C\u53D1\u5230sea-service-user\u670D\u52A1\u4E2D\u53BB
-      serviceId: CLIENTRIBBON  # \u5E94\u7528\u540D\u79F0
+      path: /api-a/**  # /api-user开头的请求，全部转发到sea-service-user服务中去
+      serviceId: CLIENTRIBBON  # 应用名称
     api-b:
       path: /api-b/**
       serviceId: CLIENTFEIGN
 
-    #\u4F20\u7EDF\u8DEF\u7531\u914D\u7F6E\uFF1A\u4E0D\u4F9D\u8D56\u670D\u52A1\u53D1\u73B0\u3002
-    #\u6240\u6709\u4EE5myapi\u5F00\u5934\u7684url\u8DEF\u7531\u81F3http://127.0.0.1:2000/\u4E0B
-    #\u5982http://127.0.0.1:8888/myapi/hello --> http://127.0.0.1:2000/hello
+    #传统路由配置：不依赖服务发现。
+    #所有以myapi开头的url路由至http://127.0.0.1:2000/下
+    #如http://127.0.0.1:8888/myapi/hello --> http://127.0.0.1:2000/hello
     myApi:
       path: /myapi/**
       url: http://127.0.0.1:2000
 
-    #forward\u6A21\u5F0F \u76F4\u63A5\u8F6C\u53D1\u81F3zuul\u63D0\u4F9B\u7684rest\u670D\u52A1
-    #\u5982http://127.0.0.1:8888/myDemo/hello?name=oKong --> http://127.0.0.1:8888/demo/hello?name=oKong
+    #forward模式 直接转发至zuul提供的rest服务
+    #如http://127.0.0.1:8888/myDemo/hello?name=oKong --> http://127.0.0.1:8888/demo/hello?name=oKong
     myDemo:
       path: /myDemo/**
       url: forward:/demo
 
-#  #\u8F6C\u53D1\u524D\u662F\u5426\u53BB\u6389\u8DEF\u7531\u524D\u7F00
-#  #\u6B64\u4E3A\u5168\u5C40\u914D\u7F6E\uFF0C\u53EF\u4EE5\u914D\u5230\u5177\u4F53\u8DEF\u7531\u89C4\u5219\u4E0B\u6539\u4E3A\u5C40\u90E8\u914D\u7F6E
-#  #\u539F\u59CB\u7684url: https://zuulIp:zuulPort/test/demo1/hello
-#  #\u5982\u679C\u8FD9\u4E2A\u53C2\u6570\u8BBE\u7F6E\u4E3Atrue\uFF0CDemo1\u670D\u52A1\u6536\u5230\u7684\u8BF7\u6C42url\u5C31\u662Fhttps://demo1Ip:demo1Port/test/hello
-#  #\u5982\u679C\u8FD9\u4E2A\u53C2\u6570\u8BBE\u7F6E\u4E3Afalse\uFF0CDemo1\u670D\u52A1\u6536\u5230\u7684\u8BF7\u6C42url\u5C31\u662Fhttps://demo1Ip:demo1Port/test/demo1/hello
+#  #转发前是否去掉路由前缀
+#  #此为全局配置，可以配到具体路由规则下改为局部配置
+#  #原始的url: https://zuulIp:zuulPort/test/demo1/hello
+#  #如果这个参数设置为true，Demo1服务收到的请求url就是https://demo1Ip:demo1Port/test/hello
+#  #如果这个参数设置为false，Demo1服务收到的请求url就是https://demo1Ip:demo1Port/test/demo1/hello
 #  strip-prefix: true
 #
-#  #\u53EF\u8BBE\u7F6E\u4E0D\u8FC7\u6EE4
-#  #\u6B64\u4E3A\u5168\u5C40\u914D\u7F6E\uFF0C\u53EF\u4EE5\u914D\u5230\u5177\u4F53\u8DEF\u7531\u89C4\u5219\u4E0B\u6539\u4E3A\u5C40\u90E8\u914D\u7F6E
+#  #可设置不过滤
+#  #此为全局配置，可以配到具体路由规则下改为局部配置
 #  sensitive-headers: "*"
 #  #sensitive-headers: Cookie,Set-Cookie,Authorization
 #
-#  #\u5FFD\u7565\u6240\u6709\u5FAE\u670D\u52A1\uFF0C\u53EA\u8DEF\u7531\u6307\u5B9A\u7684\u5FAE\u670D\u52A1
+#  #忽略所有微服务，只路由指定的微服务
 #  ignored-services: "*"
-#  #\u5FFD\u7565\u67D0\u4E9B\u5FAE\u670D\u52A1
+#  #忽略某些微服务
 #  #ignored-services: aaa,bbb
-#  #\u5FFD\u7565\u67D0\u4E9B\u8DEF\u5F84\u4E0D\u8FDB\u884C\u8DEF\u7531
+#  #忽略某些路径不进行路由
 #  ignored-patterns: "/**/selectOne/**"
 #
-#  #\u4E3A\u6240\u6709\u8DEF\u7531\u90FD\u589E\u52A0\u4E00\u4E2A\u7EDF\u4E00\u7684\u524D\u7F00
+#  #为所有路由都增加一个统一的前缀
 #  prefix: "/xxx"
 #
-#  #\u5FFD\u7565header,\u8868\u793A\u88ABzuul\u8DEF\u7531\u7684\u670D\u52A1\u90FD\u4E0D\u4F1A\u4F20\u9012 token \u8FD9\u4E2A\u8BF7\u6C42\u5934\u3002
-#  #\u6B64\u4E3A\u5168\u5C40\u914D\u7F6E\uFF0C\u5982\u679C\u9700\u8981\u5C40\u90E8\u67D0\u4E2A\u670D\u52A1\u4E2D\u914D\u7F6E\uFF0C\u4F7F\u7528\u654F\u611F\u5934sensitive-headers
+#  #忽略header,表示被zuul路由的服务都不会传递 token 这个请求头。
+#  #此为全局配置，如果需要局部某个服务中配置，使用敏感头sensitive-headers
 #  ignored-headers: token
