--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
-    <mybatis-plus.version>3.1.0</mybatis-plus.version>
+    <mybatis-plus.version>3.1.1</mybatis-plus.version>
     <fastjson.version>1.2.35</fastjson.version>
     <hutool.version>4.5.13</hutool.version>
     <druid-starter.version>1.1.10</druid-starter.version>
@@ -53,6 +53,11 @@
       <dependency>
         <groupId>com.baomidou</groupId>
         <artifactId>mybatis-plus-boot-starter</artifactId>
+        <version>${mybatis-plus.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.baomidou</groupId>
+        <artifactId>mybatis-plus-generator</artifactId>
         <version>${mybatis-plus.version}</version>
       </dependency>
       <dependency>
