--- a/hello-oauth/pom.xml
+++ b/hello-oauth/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.he</groupId>
-        <artifactId>springcloud-demo</artifactId>
+        <artifactId>hello-springcloud</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -35,6 +35,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
         <dependency>
